{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 503,
  "lineage": "cae0f482-6960-02ee-5ec6-41415d31860b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-089f365c7b6a04f00",
            "arn": "arn:aws:ec2:us-east-1:021891614879:instance/i-0f9ad2f8ff5dc9f00",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f9ad2f8ff5dc9f00",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "linuxkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04f0fc30e396b423c",
            "private_dns": "ip-10-0-1-103.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.103",
            "public_dns": "ec2-54-147-48-24.compute-1.amazonaws.com",
            "public_ip": "54.147.48.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09168950c7b53bcc4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05aa60fd6ee60fe86",
            "tags": {
              "Name": "wordpress-ec2"
            },
            "tags_all": {
              "Name": "wordpress-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-063e48995beac0e6a"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_multiports_wordpress_sg",
            "aws_subnet.pub-subnet",
            "aws_vpc.wp-vpc",
            "data.aws_ami.ami_version"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "wordpress_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891614879:internet-gateway/igw-0422ffa1dbe97c7c9",
            "id": "igw-0422ffa1dbe97c7c9",
            "owner_id": "021891614879",
            "tags": {
              "Name": "wordpress_igw"
            },
            "tags_all": {
              "Name": "wordpress_igw"
            },
            "vpc_id": "vpc-0da7cfdf87bef654a"
          },
          "dependencies": [
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wp-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891614879:route-table/rtb-03ae34a6ee646fb84",
            "id": "rtb-03ae34a6ee646fb84",
            "owner_id": "021891614879",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0422ffa1dbe97c7c9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wordpress-rt"
            },
            "tags_all": {
              "Name": "wordpress-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da7cfdf87bef654a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.wordpress_igw",
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_rt_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.1.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ce506365e62dcea",
            "route_table_id": "rtb-03ae34a6ee646fb84",
            "subnet_id": "subnet-05aa60fd6ee60fe86"
          },
          "dependencies": [
            "aws_internet_gateway.wordpress_igw",
            "aws_route_table.wp-rt",
            "aws_subnet.pub-subnet",
            "aws_vpc.wp-vpc"
          ]
        },
        {
          "index_key": "10.0.2.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04479535de8631ec1",
            "route_table_id": "rtb-03ae34a6ee646fb84",
            "subnet_id": "subnet-07e0cfccfcfa8f3a9"
          },
          "dependencies": [
            "aws_internet_gateway.wordpress_igw",
            "aws_route_table.wp-rt",
            "aws_subnet.pub-subnet",
            "aws_vpc.wp-vpc"
          ]
        },
        {
          "index_key": "10.0.3.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005cc19d8f126d438",
            "route_table_id": "rtb-03ae34a6ee646fb84",
            "subnet_id": "subnet-0528ad83ec269965e"
          },
          "dependencies": [
            "aws_internet_gateway.wordpress_igw",
            "aws_route_table.wp-rt",
            "aws_subnet.pub-subnet",
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_multiports_wordpress_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891614879:security-group/sg-063e48995beac0e6a",
            "description": "Allow HTTP/HTTPS, SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-063e48995beac0e6a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Wordpress-EC2-SG",
            "name_prefix": "",
            "owner_id": "021891614879",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Wordpress-EC2-SG"
            },
            "tags_all": {
              "Name": "Wordpress-EC2-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da7cfdf87bef654a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.1.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891614879:subnet/subnet-05aa60fd6ee60fe86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05aa60fd6ee60fe86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "021891614879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet-10.0.1.0/24"
            },
            "tags_all": {
              "Name": "pub-subnet-10.0.1.0/24"
            },
            "vpc_id": "vpc-0da7cfdf87bef654a"
          },
          "dependencies": [
            "aws_vpc.wp-vpc"
          ]
        },
        {
          "index_key": "10.0.2.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891614879:subnet/subnet-07e0cfccfcfa8f3a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e0cfccfcfa8f3a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "021891614879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet-10.0.2.0/24"
            },
            "tags_all": {
              "Name": "pub-subnet-10.0.2.0/24"
            },
            "vpc_id": "vpc-0da7cfdf87bef654a"
          },
          "dependencies": [
            "aws_vpc.wp-vpc"
          ]
        },
        {
          "index_key": "10.0.3.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891614879:subnet/subnet-0528ad83ec269965e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0528ad83ec269965e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "021891614879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet-10.0.3.0/24"
            },
            "tags_all": {
              "Name": "pub-subnet-10.0.3.0/24"
            },
            "vpc_id": "vpc-0da7cfdf87bef654a"
          },
          "dependencies": [
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wp-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891614879:vpc/vpc-0da7cfdf87bef654a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0acff2acc10113440",
            "default_route_table_id": "rtb-02a8a446acbe807c0",
            "default_security_group_id": "sg-0cd8ef948d947bab1",
            "dhcp_options_id": "dopt-0000a12e5b3eebea3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0da7cfdf87bef654a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02a8a446acbe807c0",
            "owner_id": "021891614879",
            "tags": {
              "Name": "wordpress-vpc"
            },
            "tags_all": {
              "Name": "wordpress-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.wp-main-pub",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891614879:route-table/rtb-0f8d8bb641f73945d",
            "id": "rtb-0f8d8bb641f73945d",
            "owner_id": "021891614879",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "wordpress-db-rt"
            },
            "tags_all": {
              "Name": "wordpress-db-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da7cfdf87bef654a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.wp-main-pub",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pr_rt_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.101.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057c11c1b15b0c052",
            "route_table_id": "rtb-0f8d8bb641f73945d",
            "subnet_id": "subnet-0426b1ccb50fdb1eb"
          },
          "dependencies": [
            "aws_vpc.wp-vpc",
            "module.wp-main-pub.aws_route_table.db_rt",
            "module.wp-main-pub.aws_subnet.pr-subnet"
          ]
        },
        {
          "index_key": "10.0.102.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0283f03a732bb830f",
            "route_table_id": "rtb-0f8d8bb641f73945d",
            "subnet_id": "subnet-09d986a8bcf4841ab"
          },
          "dependencies": [
            "aws_vpc.wp-vpc",
            "module.wp-main-pub.aws_route_table.db_rt",
            "module.wp-main-pub.aws_subnet.pr-subnet"
          ]
        },
        {
          "index_key": "10.0.103.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0610b93f128f9a229",
            "route_table_id": "rtb-0f8d8bb641f73945d",
            "subnet_id": "subnet-075f6ab04436dd223"
          },
          "dependencies": [
            "aws_vpc.wp-vpc",
            "module.wp-main-pub.aws_route_table.db_rt",
            "module.wp-main-pub.aws_subnet.pr-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.wp-main-pub",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891614879:security-group/sg-06dcffd28524e7347",
            "description": "Security group for WP-Database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06dcffd28524e7347",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-063e48995beac0e6a"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "021891614879",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-sg"
            },
            "tags_all": {
              "Name": "rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da7cfdf87bef654a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_multiports_wordpress_sg",
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.wp-main-pub",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pr-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.101.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891614879:subnet/subnet-0426b1ccb50fdb1eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0426b1ccb50fdb1eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021891614879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv-subnet-10.0.101.0/24"
            },
            "tags_all": {
              "Name": "priv-subnet-10.0.101.0/24"
            },
            "vpc_id": "vpc-0da7cfdf87bef654a"
          },
          "dependencies": [
            "aws_vpc.wp-vpc"
          ]
        },
        {
          "index_key": "10.0.102.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891614879:subnet/subnet-09d986a8bcf4841ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d986a8bcf4841ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021891614879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv-subnet-10.0.102.0/24"
            },
            "tags_all": {
              "Name": "priv-subnet-10.0.102.0/24"
            },
            "vpc_id": "vpc-0da7cfdf87bef654a"
          },
          "dependencies": [
            "aws_vpc.wp-vpc"
          ]
        },
        {
          "index_key": "10.0.103.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891614879:subnet/subnet-075f6ab04436dd223",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075f6ab04436dd223",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021891614879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv-subnet-10.0.103.0/24"
            },
            "tags_all": {
              "Name": "priv-subnet-10.0.103.0/24"
            },
            "vpc_id": "vpc-0da7cfdf87bef654a"
          },
          "dependencies": [
            "aws_vpc.wp-vpc"
          ]
        }
      ]
    }
  ]
}